added folders login, registration, as well as jquery stuff

--- a/src/main/webapp/jquery/components/user-admin/user-admin.template.client.html
+++ b/src/main/webapp/jquery/components/user-admin/user-admin.template.client.html
@@ -1,94 +1,92 @@
 <!DOCTYPE html>
 <html>
-
-
-
+<title>Admin Page</title>
 
 <body>
-
-
-  <div class="container">
+<div class="container">
     <h1 id="title">User Admin</h1>
     <table class="table">
-      <thead>
+        <thead>
         <tr>
-          <th>Username</th>
-          <th>Password</th>
-          <th>First Name</th>
-          <th>Last Name</th>
-          <th>Phone number</th>
-          <th>Email</th>
-          <th>Date of Birth</th>
-          <th>Role</th>
+            <th>Username</th>
+            <th>Password</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Phone number</th>
+            <th>Email</th>
+            <th>Date of Birth</th>
+            <th>Role</th>
         </tr>
         <tr>
-          <th>
-            <input id="usernameFld" class="form-control" placeholder="username" />
-          </th>
-          <th>
-            <input id="passwordFld" class="form-control" type="password" placeholder="password" />
-          </th>
-          <th>
-            <input id="firstNameFld" class="form-control" placeholder="first name" />
-          </th>
-          <th>
-            <input id="lastNameFld" class="form-control" placeholder="last name" />
-          </th>
-          <th>
-            <input id="phone" type="tel" class="form-control" placeholder="(xxx) xxx xxxx" />
-          </th>
-          <th>
-            <input id="email" type="email" class="form-control" placeholder="email" />
-          </th>
-          <th>
-            <input id="dob" type="date" name="dob">
-          </th>
-          <th>
-            <select>
-            <option value="student">Student</option>
-            <option value="faculty">Faculty</option>
-            <option value="admin">Admin</option>
+            <th>
+                <input id="usernameFld" class="form-control" placeholder="username"/>
+            </th>
+            <th>
+                <input id="passwordFld" class="form-control" type="password"
+                       placeholder="password"/>
+            </th>
+            <th>
+                <input id="firstNameFld" class="form-control" placeholder="first name"/>
+            </th>
+            <th>
+                <input id="lastNameFld" class="form-control" placeholder="last name"/>
+            </th>
+            <th>
+                <input id="phone" type="tel" class="form-control" placeholder="(xxx) xxx xxxx"/>
+            </th>
+            <th>
+                <input id="email" type="email" class="form-control" placeholder="email"/>
+            </th>
+            <th>
+                <input id="dob" type="date" name="dob">
+            </th>
+            <th>
+                <select>
+                    <option value="student">Student</option>
+                    <option value="faculty">Faculty</option>
+                    <option value="admin">Admin</option>
                 </select>
-          </th>
-          <th><button id="createUserBtn" class="btn btn-success">Create</button></th>
+            </th>
+            <th>
+                <button id="createUserBtn" class="btn btn-success">Create</button>
+            </th>
         </tr>
-      </thead>
+        </thead>
 
-      <tbody>
+        <tbody>
         <tr class="template">
-          <td class="username">alicew</td>
-          <td>****</td>
-          <td>Alice</td>
-          <td>Wonderland</td>
-          <td>(824) 234 4827</td>
-          <td>alice@wonderland.com</td>
-          <td>0/00/00</td>
-          <td>Faculty</td>
-          <th>
-            <div>
-              <button id="deleteUserBtn" class="delete btn btn-danger">Delete</button>
-            </div>
-            <div>
-              <button id="editUserBtn" class="edit btn btn-danger">Edit</button>
-            </div>
-          </th>
+            <td class="username">alicew</td>
+            <td>****</td>
+            <td>Alice</td>
+            <td>Wonderland</td>
+            <td>(824) 234 4827</td>
+            <td>alice@wonderland.com</td>
+            <td>0/00/00</td>
+            <td>Faculty</td>
+            <th>
+                <div>
+                    <button id="deleteUserBtn" class="delete btn btn-danger">Delete</button>
+                </div>
+                <div>
+                    <button id="editUserBtn" class="edit btn btn-danger">Edit</button>
+                </div>
+            </th>
         </tr>
-      </tbody>
+        </tbody>
     </table>
-  </div>
+</div>
 </body>
 
-
-
-<head>
-  <meta charset="UTF-8">
-  <title>User Admin</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <link href="user-admin.style.client.css" rel="stylesheet" />
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="user-admin.controller.client.js"></script>
-
-</head>
+<meta charset="UTF-8">
+<title>User Admin</title>
+<link rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
+<link rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+<link href="user-admin.style.client.css" rel="stylesheet"/>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+<script src="user-admin.controller.client.js"></script>
 
 </html>
