Added proifle controller js and profile style css

--- a/src/main/webapp/jquery/components/login/login.template.client.html
+++ b/src/main/webapp/jquery/components/login/login.template.client.html
@@ -13,4 +13,4 @@
 </div>
 
 <button type="button" id="loginBtn">Login</button>
-<a href="../../register/register.template.client.html">Register</a>
+<a href="../register/register.template.client.html">Register</a>
