Can now delete and create user

--- a/src/main/webapp/jquery/components/user-admin/user-admin.template.client.html
+++ b/src/main/webapp/jquery/components/user-admin/user-admin.template.client.html
@@ -56,13 +56,13 @@
         <tbody>
         <tr class="template">
             <td class="username">alicew</td>
-            <td>****</td>
-            <td>Alice</td>
-            <td>Wonderland</td>
-            <td>(824) 234 4827</td>
-            <td>alice@wonderland.com</td>
-            <td>0/00/00</td>
-            <td>Faculty</td>
+            <td class="password">****</td>
+            <td class="firstName">Alice</td>
+            <td class="lastName">Wonderland</td>
+            <td class="phone">(824) 234 4827</td>
+            <td class="email">alice@wonderland.com</td>
+            <td class="dob">0/00/00</td>
+            <td class="role">Faculty</td>
             <th>
                 <div>
                     <button id="deleteUserBtn" class="delete btn btn-danger">Delete</button>
@@ -87,5 +87,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
+<script src="../../services/user.service.client.js"></script>
 <script src="user-admin.controller.client.js"></script>
 </html>
