Can now edit user, update user, create also happens synchronously

--- a/src/main/webapp/jquery/components/user-admin/user-admin.template.client.html
+++ b/src/main/webapp/jquery/components/user-admin/user-admin.template.client.html
@@ -17,10 +17,9 @@
             <th>Date of Birth</th>
             <th>Role</th>
         </tr>
-        <tr>
+        <tr id=0 class="inputRow">
             <th>
                 <input id="usernameFld" placeholder="username"/>
-            </th>
             <th>
                 <input id="passwordFld" type="password"
                        placeholder="password"/>
@@ -47,8 +46,10 @@
                     <option value="admin">Admin</option>
                 </select>
             </th>
+
             <th>
                 <button id="createUserBtn" class="btn btn-success">Create</button>
+                <button id="updateUserBtn" class="btn btn-success">Update User</button>
             </th>
         </tr>
         </thead>
