Can register users now, verify works also

--- a/src/main/webapp/jquery/components/login/login.template.client.html
+++ b/src/main/webapp/jquery/components/login/login.template.client.html
@@ -38,3 +38,4 @@
         "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
 
 <link href="login.style.client.css" rel="stylesheet"/>
+<script type="text/javascript" src="../../models/user.model.client.js"></script>
