--- a/src/main/webapp/jquery/components/user-admin/user-admin.template.client.html
+++ b/src/main/webapp/jquery/components/user-admin/user-admin.template.client.html
@@ -88,6 +88,9 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
+
 <script src="../../services/user.service.client.js"></script>
+<link href="user-admin.style.client.css" rel="stylesheet">
 <script src="user-admin.controller.client.js"></script>
+<script type="text/javascript" src="../../models/user.model.client.js"></script>
 </html>
