Corrected java duplication

--- a/src/main/webapp/jquery/components/login/login.template.client.html
+++ b/src/main/webapp/jquery/components/login/login.template.client.html
@@ -11,18 +11,18 @@
 
 
 <div>
-    <label for="usernameFld">
+    <label for="usernameLoginFld">
         Username</label>
-    <input type="text" id="usernameFld" placeholder="username">
+    <input type="text" id="usernameLoginFld" placeholder="username">
 </div>
 
 <div>
     <tr>
-        <label for="passwordFld">
+        <label for="passwordLoginFld">
             Password</label>
-        <input type="password" id="passwordFld" placeholder="password">
+        <input type="password" id="passwordLoginFld" placeholder="password">
         <a class="logInBtn btn-lg btn-success"
-           href="../login/login.template.client.html" role="button">
+           href="../login/login.template.client.html" role="button" id="loginLogBtn">
             Log In</a>
     </tr>
 </div>
