--- a/src/main/webapp/jquery/components/user-admin/user-admin.template.client.html
+++ b/src/main/webapp/jquery/components/user-admin/user-admin.template.client.html
@@ -31,7 +31,7 @@
                 <input id="lastNameFld" placeholder="last name"/>
             </th>
             <th>
-                <input id="phoneFld" type="tel" placeholder="(xxx) xxx xxxx"/>
+                <input id="phoneFlds" type="tel" placeholder="(xxx) xxx xxxx"/>
             </th>
             <th>
                 <input id="emailFld" type="email" placeholder="email"/>
