Added some breaks for formatting

--- a/src/main/webapp/jquery/components/register/register.template.client.html
+++ b/src/main/webapp/jquery/components/register/register.template.client.html
@@ -12,13 +12,14 @@
 </div>
 
 
-<div class="container">
+<div>
     <label for="usernameFld">
         Username
     </label>
     <input type="text"
            placeholder="Type Username"
-           id="usernameFld"/>
+           id="usernameFld"/> </br>
+
 </div>
 
 <div>
@@ -27,7 +28,7 @@
     </label>
     <input type="password"
            placeholder="Type Password"
-           id="passwordFld"/>
+           id="passwordFld"/> </br>
 </div>
 
 <div>
@@ -36,7 +37,7 @@
     </label>
     <input type="password"
            placeholder="Verify Password"
-           id="verifyPasswordFld"/>
+           id="verifyPasswordFld"/> </br>
 </div>
 <a class="registerBtn btn-lg btn-info"
    href="../register/register.template.client.html" role="button" id="regBtn">
