Register now takes you to profile

--- a/src/main/webapp/jquery/components/register/register.template.client.html
+++ b/src/main/webapp/jquery/components/register/register.template.client.html
@@ -40,7 +40,7 @@
            id="verifyPasswordFld"/> </br>
 </div>
 <a class="registerBtn btn-lg btn-info"
-   href="../register/register.template.client.html" role="button" id="regBtn">
+   role="button" id="regBtn">
     Register</a>
 
 <a class="loginBtn btn-lg btn-success" href="../login/login.template.client.html" id="loginBtn">
