--- a/src/main/webapp/jquery/components/profile/profile.template.client.html
+++ b/src/main/webapp/jquery/components/profile/profile.template.client.html
@@ -51,6 +51,10 @@
   </div>
 </body>
 
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+
 <script type="text/javascript" src="../../models/user.model.client.js"></script>
 
 </html>
