commit before release

--- a/src/main/webapp/jquery/components/login/login.template.client.html
+++ b/src/main/webapp/jquery/components/login/login.template.client.html
@@ -3,7 +3,7 @@
     <title>Login Page</title>
 </head>
 
-
+<div>
 <body>
 <h1>
     <b>Login Here</b>
@@ -21,16 +21,18 @@
         <label for="passwordLoginFld">
             Password</label>
         <input type="password" id="passwordLoginFld" placeholder="password">
-        <a role="button" class="logInBtn btn-lg btn-success" href="login.template.client.html"
-            id="loginLogBtn">
+        <a class="logInBtn btn-lg btn-success"
+           role="button" id="loginLogBtn" href="login.template.client.html">
             Log In</a>
     </tr>
 </div>
 
-</body>
-<em>Don't have an account?</em>
-<a role="button" class="logInBtn btn-lg btn-success" href="../register/register.template.client.html">Register</a>
 
+<em>Don't have an account?</em>
+<a class="logInBtn btn-lg btn-success" href="../register/register.template.client.html">Register</a>
+
+</body>
+</div>
 <link rel="stylesheet" href=
         "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
 
