--- a/src/main/webapp/jquery/components/login/login.style.client.css
+++ b/src/main/webapp/jquery/components/login/login.style.client.css
@@ -1,10 +1,19 @@
 body {
-    margin: 0;
-    padding: 0;
+  width: 900px;
+    margin: 0 auto;
+    padding: 100;
+    background: url(../../resources/cloud.jpg);
     background-size: cover;
     background-position: center;
     font-family: sans-serif;
+    text-align: center;
+    display: table-cell;
+    vertical-align: middle;
 }
+
+
+
+
 
 b {
   font-size: 90px;
