--- a/src/main/webapp/jquery/components/register/register.style.client.css
+++ b/src/main/webapp/jquery/components/register/register.style.client.css
@@ -1,7 +1,12 @@
 body {
-    margin: 0;
-    padding: 0;
+    width: 900px;
+    margin: 0 auto;
+    padding: 100;
+    background: url(../../resources/cloud.jpg);
     background-size: cover;
     background-position: center;
     font-family: sans-serif;
+    text-align: center;
+    display: table-cell;
+    vertical-align: middle;
 }
