--- a/src/main/webapp/jquery/components/register/register.template.client.html
+++ b/src/main/webapp/jquery/components/register/register.template.client.html
@@ -2,7 +2,7 @@
 <head>
     <title>Registration Page</title>
 </head>
-
+<div>
 <tr>
     <div>
         <h1>
@@ -47,8 +47,9 @@
     <a class="loginBtn btn-lg btn-success" href="../login/login.template.client.html" id="loginBtn">
         Back To Login
     </a>
-    </body>
+  </body>
 
+</div>
 
     <meta charset="UTF-8">
     <title>User Admin</title>
