Last commit before final submission. Fixed profile!

--- a/src/main/webapp/jquery/components/login/login.template.client.html
+++ b/src/main/webapp/jquery/components/login/login.template.client.html
@@ -29,7 +29,7 @@
 
 
 <em>Don't have an account?</em>
-<a class="logInBtn btn-lg btn-success" href="../register/register.template.client.html">Register</a>
+<a class="logInBtn btn-lg btn-success" href="../register/register.template.client.html">To Register Page</a>
 
 </body>
 </div>
