--- a/src/main/webapp/jquery/components/register/register.template.client.html
+++ b/src/main/webapp/jquery/components/register/register.template.client.html
@@ -3,7 +3,6 @@
     <title>Registration Page</title>
 </head>
 <div>
-<tr>
     <div>
         <h1>
             <b>Register Here</b>
@@ -45,7 +44,7 @@
         Register</a>
 
     <a class="loginBtn btn-lg btn-success" href="../login/login.template.client.html" id="loginBtn">
-        Back To Login
+        To Login Page
     </a>
   </body>
 
