--- a/src/main/webapp/jquery/components/profile/profile.template.client.html
+++ b/src/main/webapp/jquery/components/profile/profile.template.client.html
@@ -1,60 +1,90 @@
-<!DOCTYPE html>
 <html>
-
 <head>
-  <meta charset="UTF-8">
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" />
-  <title>Insert title here</title>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-
-  <script src="../../services/user.service.client.js"></script>
-  <script src="profile.controller.client.js"></script>
-
+    <title>Profile Page</title>
 </head>
+<div>
+    <div>
+        <h1>
+            <b>Profile Page</b>
 
-<body>
-  <div class="container">
-    <h1 id="title">Profile</h1>
+        </h1>
+    </div>
 
-    <form>
-      <div class="form-group row">
-        <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
-        <div class="col-sm-10">
-          <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
-        </div>
-      </div>
-      <div class="form-group row">
-        <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
-        <div class="col-sm-10">
-          <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-        </div>
-      </div>
-      <div class="form-group row">
-        <label for="firstName" class="col-sm-2 col-form-label">
-          First Name
+
+    <div>
+        <label for="username">
+            Username
         </label>
-        <div class="col-sm-10">
-          <input type="text" class="form-control" id="firstName" placeholder="first name">
-        </div>
-      </div>
-      <div class="form-group row">
-        <label for="lastName" class="col-sm-2 col-form-label">
-          Last Name
+        <input type="text"
+               placeholder="Username"
+               id="username"/> </br>
+
+    </div>
+
+    <div>
+        <label for="firstName">
+            First Name
         </label>
-        <div class="col-sm-10">
-          <input type="text" class="form-control" id="lastName" placeholder="last">
-        </div>
-      </div>
-      <button id="updateBtn" type="button" class="btn btn-primary btn-block">Update</button>
-    </form>
+        <input type="text"
+               placeholder="First name"
+               id="firstName"/> </br>
+    </div>
 
-  </div>
-</body>
 
+    <div>
+        <label for="lastName">
+            Surname
+        </label>
+        <input type="text"
+               placeholder="Surname"
+               id="lastName"/> </br>
+    </div>
+
+    <div>
+        <label for="phone">
+            Phone
+        </label>
+        <input type="tel"
+               placeholder="(xxx) xxx xxxx"
+               id="phone"/> </br>
+    </div>
+
+    <div>
+        <th>
+            <select id="role">
+                <option value="student">Student</option>
+                <option value="faculty">Faculty</option>
+                <option value="admin">Admin</option>
+            </select>
+        </th>
+        </br>
+    </div>
+
+    <a class="registerBtn btn-lg btn-success"
+       role="button" id="updateBtn">
+        Update</a>
+
+    <a class="loginBtn btn-lg btn-success"
+       id="logoutBtn">
+        Logout
+    </a>
+    </body>
+
+</div>
+
+<meta charset="UTF-8">
+<title>Profile Page</title>
+<link rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
+<link rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+<link href="register.style.client.css" rel="stylesheet"/>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
 
+<script src="../../services/user.service.client.js"></script>
+<link href="profile.style.client.css" rel="stylesheet">
+<script src="profile.controller.client.js"></script>
 <script type="text/javascript" src="../../models/user.model.client.js"></script>
-
 </html>
