fixed xml, last commit

--- a/src/main/webapp/jquery/components/register/register.style.client.css
+++ b/src/main/webapp/jquery/components/register/register.style.client.css
@@ -1,7 +1,7 @@
 body {
     width: 900px;
     margin: 0 auto;
-    padding: 100;
+    padding: 100px;
     background: url(../../resources/cloud.jpg);
     background-size: cover;
     background-position: center;
