--- a/src/main/webapp/jquery/components/register/register.template.client.html
+++ b/src/main/webapp/jquery/components/register/register.template.client.html
@@ -3,6 +3,8 @@
     <title>Registration Page</title>
 </head>
 <div>
+
+<body>
     <div>
         <h1>
             <b>Register Here</b>
@@ -46,7 +48,7 @@
     <a class="loginBtn btn-lg btn-success" href="../login/login.template.client.html" id="loginBtn">
         To Login Page
     </a>
-  </body>
+</body>
 
 </div>
 
